# modbus_tester

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  persistence.rs  scanner.rs  sim_commands.rs  simulator.rs
src/components/: MainContent.tsx
src/components/ConsolePanel/: ConsolePanel.tsx
src/components/DeviceSidebar/: AddDeviceDialog.tsx  DeviceSidebar.tsx  ScanDialog.tsx
src/components/DiscoveryMode/: CoilsTable.tsx  DiscoveryMode.tsx  RegistersTable.tsx
src/components/ProbeWindow/: ProbeWindow.tsx
src/components/SimulatorPanel/: SimulatorPanel.tsx
src/components/WatchlistMode/: WatchlistMode.tsx
src/components/ui/: Modal.tsx
src/lib/: api.ts  loggedApi.ts
src/store/: useAppStore.ts
src/styles/: globals.css
src/types/: index.ts
