[package]
name = "modbus-tester"
version = "0.1.0"
edition = "2021"

[lib]
name = "modbus_tester_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.14", default-features = false, features = ["tcp", "tcp-server"] }
uuid        = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "s"
strip = true
